# jmp-scape

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: asm_based.rs  cee_based.rs  glibc_compat.rs  lib.rs
