[package]
name = "jmp-scape"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Safe Rust access to setjmp and sigsetjmp, forked from cee-scape."
homepage = "https://github.com/gagan405/jmp-scape"
documentation = "https://docs.rs/jmp-scape/"
repository = "https://github.com/gagan405/jmp-scape"
readme = "README.md"
keywords = ["setjmp", "longjmp", "ffi", "c", "signal"]
categories = ["external-ffi-bindings", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", default-features = false }

[dev-dependencies]
expect-test = "1.5"

[build-dependencies]
cc = { version = "1.2" }

#[profile.release]
#debug = "full"

[features]
default = ["test_c_integration"]
use_c_to_interface_with_setjmp = []
test_c_integration = []
